--- a/package.json
+++ b/package.json
@@ -22,16 +22,16 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
-    "@capacitor/android": "^7.2.0",
-    "@capacitor/app": "7.0.0",
+    "@capacitor/android": "^7.4.0",
+    "@capacitor/app": "^7.0.0",
     "@capacitor/camera": "^7.0.1",
-    "@capacitor/core": "7.1.0",
+    "@capacitor/core": "^7.1.0",
     "@capacitor/geolocation": "^7.1.2",
     "@capacitor/haptics": "7.0.0",
     "@capacitor/keyboard": "7.0.0",
     "@capacitor/status-bar": "7.0.0",
     "@ionic/angular": "^8.0.0",
-    "firebase": "^11.8.1",
+    "firebase": "^11.10.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
